# CallRecorder

./: .gitignore  build.gradle  build.gradle.kts  gradle.properties  installSystem.sh  privapp-permissions-com.redridgeapps.callrecorder.xml  settings.gradle  settings.gradle.kts
app/: app.gradle  app.gradle.kts  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: splash_screen.xml
app/src/main/res/values/: styles.xml
buildSrc/: build.gradle
buildSrc/src/main/kotlin/: AppSystemizer.kt  ManifestParser.kt  ProjectConfig.kt  TerminalTools.kt
call_utils/: call_utils.gradle  call_utils.gradle.kts
call_utils/src/main/: AndroidManifest.xml
common/: common.gradle  common.gradle.kts
common/src/main/: AndroidManifest.xml
compose_viewmodel/: compose_viewmodel.gradle
compose_viewmodel/src/main/: AndroidManifest.xml
composeui/: build.gradle
composeui/src/main/: AndroidManifest.xml
composeui/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
gradle_plugins/: build.gradle  settings.gradle
gradle_plugins/common_configuration/: common_configuration.gradle
gradle_plugins/dependencies/: dependencies.gradle
lame_wrapper/: .gitignore  Cargo.toml  build.rs
lame_wrapper/src/: lame.rs  lib.rs
libmp3lame/: CMakeLists.txt  build.gradle
libmp3lame/src/main/: AndroidManifest.xml
libmp3lame/src/main/cpp/mp3lame/: wrapper.c
libmp3lame/src/main/java/com/redridgeapps/libmp3lame/: JniException.kt  Mp3Encoder.kt
mp3_encoder/: mp3_encoder.gradle  mp3_encoder.gradle.kts
mp3_encoder/src/main/: AndroidManifest.xml
mp3encoding/: mp3encoding.gradle
mp3encoding/src/main/: AndroidManifest.xml
prefs/: prefs.gradle  prefs.gradle.kts
prefs/src/main/: AndroidManifest.xml
prefs/src/main/proto/: preferences.proto
repository/: build.gradle  repository.gradle
repository/src/main/: AndroidManifest.xml
ui/: build.gradle  ui.gradle
ui/src/main/: AndroidManifest.xml
ui_common/: ui_common.gradle
ui_common/src/main/: AndroidManifest.xml
ui_first_run/: ui_first_run.gradle
ui_first_run/src/main/: AndroidManifest.xml
ui_main/: ui_main.gradle
ui_main/src/main/: AndroidManifest.xml
ui_settings/: ui_settings.gradle
ui_settings/src/main/: AndroidManifest.xml
wav_utils/: wav_utils.gradle  wav_utils.gradle.kts
(+416 files in other folders)
