[package]
name = "lame_wrapper"
version = "0.1.0"
authors = ["Saurabh Sandav <justmailsaurabh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0.50"

[dependencies]
jni = "0.16.0"

[lib]
crate_type = ["staticlib", "dylib"]
